--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -112,7 +113,7 @@
                 
             </select></div></div>
     
-            <div class="fx"><div class="cp"><img></div><div class="cp">Night Time</div><div class="cp"><select>
+            <div class="fx"><div class="cp"><img src="./night.jpg" alt="night" width="45vw" height="45vh"></div><div class="cp">Night Time</div><div class="cp"><select>
                 <option value="Default">Default</option>
                 <option value="12">12AM-1PM</option>
                 <option value="13">1PM-2PM</option>
